2006-01-08  Neil Williams <linux@codehelp.co.uk>

	* src/import-export/qif-import/test/Makefile.am : OSX fix.
	* po/en_GB.po : (To assist the TP project,
	with help from Nigel Titley, GNU translator.)
	Remaining: 92 fuzzy translations, 1 untranslated message
	* . : Adding *.prj.bak to svn:ignore.

2006-01-08  Neil Williams <linux@codehelp.co.uk>

	* src/engine/Transaction.c : Even up ENTER and LEAVE
	calls.
	* src/gnome-utils/druid-gconf-setup.c : Typo fix.
	* src/gnome-utils/gnc-tree-model-budget.h : Doxygen tweak.
	* src/gnome/gnc-plugin-budget.c : Match ENTER with LEAVE
	* src/gnome/gnc-plugin-page-budget.h : Doxygen tweak.

2006-01-08  Christian Stimming  <stimming@tuhh.de>

	* src/gnome-utils/gnc-main-window.c: Add gnc workaround function
	for errorneous gtk_action_group_set_translation_domain. Fixes the
	statusbar-tooltip error mentioned on 2006-01-07. Filed in gtk as
	bug#326200.

2006-01-07  David Hampton  <hampton@employees.org>

	* src/report/standard-reports/account-summary.scm: Copy the table
	markup from an intermediate table to the final displayed table.
	
	* src/report/report-system/html-acct-table.scm: When building a
	html table from an account tree, apply markup to the "total" lines
	so that they use the right stylesheet colors.

	* src/report/standard-reports/portfolio.scm:
	* src/report/standard-reports/advanced-portfolio.scm: Fix the
	"share decimal places" option.

2006-01-07  Christian Stimming  <stimming@tuhh.de>

	* src/gnome/gnc-plugin-page-register.c,
	src/report/report-gnome/gnc-plugin-page-report.c: Add more
	tooltips to actions.

	* src/gnome-utils/gnc-main-window.c: Add display of a GtkAction's
	tooltip in the statusbar when the mouse is selection its menu
	item. Code copied from gtk+'s test/testmerge.c. Works fine, except
	that in non-C locales some "" tooltips are translated in a weird
	way. Maybe because "" is errorneously passed through gettext(),
	which will accidentally catch a wrong string from the po